GNOME Bugzilla – Bug 620453
Plugin dialogs's configure button sensitivity not updated correctly
Last modified: 2010-06-03 17:07:06 UTC
Created attachment 162626 [details] The bug If you click quickly you can cause the plugin to be deactivated but have the configure button sensitive.
Created attachment 162627 [details] [review] Fix plugin dialogs's configure button sensitivity not being updated correctly
Review of attachment 162627 [details] [review]: Looks good, also would be good to backport it to libpeas.
@nacho: Open a new bug and submitted a patch. This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.