[PluginManager] Fix pref button sensitivity not being updated correctly

If you clicked quickly you could cause the plugin to be deactivated but
have the configure button sensitive.

https://bugzilla.gnome.org/show_bug.cgi?id=620453
https://bugzilla.gnome.org/show_bug.cgi?id=620499